Change image file extensions from .jpg to .jpeg

--- a/index.html
+++ b/index.html
@@ -265,26 +265,26 @@
 <!-- Sol kenar (3 polaroid) -->
   <div class="edgePolaroids left">
     <div class="edgePolaroid" style="--rot:-4deg">
-      <img src="photos/left1.jpg" alt="anı">
+      <img src="photos/left1.jpeg" alt="anı">
     </div>
     <div class="edgePolaroid" style="--rot:2deg">
-      <img src="photos/left2.jpg" alt="anı">
+      <img src="photos/left2.jpeg" alt="anı">
     </div>
     <div class="edgePolaroid" style="--rot:-1deg">
-      <img src="photos/left3.jpg" alt="anı">
+      <img src="photos/left3.jpeg" alt="anı">
     </div>
   </div>
 
   <!-- Sağ kenar (3 polaroid) -->
   <div class="edgePolaroids right">
     <div class="edgePolaroid" style="--rot:3deg">
-      <img src="photos/right1.jpg" alt="anı">
+      <img src="photos/right1.jpeg" alt="anı">
     </div>
     <div class="edgePolaroid" style="--rot:-3deg">
-      <img src="photos/right2.jpg" alt="anı">
+      <img src="photos/right2.jpeg" alt="anı">
     </div>
     <div class="edgePolaroid" style="--rot:1deg">
-      <img src="photos/right3.jpg" alt="anı">
+      <img src="photos/right3.jpeg" alt="anı">
     </div>
   </div>
 
