Update daily messages in index.html

--- a/index.html
+++ b/index.html
@@ -405,36 +405,36 @@
   const START_DATE = "2025-11-29";  // 30 günlük mesajların başlayacağı gün
 
   const M = [
-    "Gün 1:\nBugün bu sayfayı açtıysan… sistem çalışıyor demektir.\nÇünkü sen varsın.",
-    "Gün 2:\nKüçük bir not: Gülüşün benim en sevdiğim bildirim sesi.",
-    "Gün 3:\nCool davranmaya çalışıyorum ama olmadı:\nSeni özledim.",
-    "Gün 4:\nBugün sadece şunu bil:\nYanında sakinleşiyorum.",
-    "Gün 5:\nSeninle konuşunca zaman hızlanıyor.\nSensizse… update gelmiyor.",
-    "Gün 6:\nBir şey itiraf edeyim:\nBen senin yanında daha iyi biriyim.",
-    "Gün 7:\nMini görev: Bugün kendine nazik ol.\nBen de uzaktan alkışlıyorum.",
-    "Gün 8:\nSen = güven.\nBu kadar net.",
-    "Gün 9:\nBugünlük romantizm dozunu artırıyorum:\nKokun aklımda kaldı.",
-    "Gün 10:\nTatlı bir gerçek:\nSana yazmak, günün en kolay kararı.",
-    "Gün 11:\nBazen cool cümle kuruyorum ya…\nİçimdeki “seni seviyorum”u saklamak için.",
-    "Gün 12:\nBugün: Sen gül.\nBen sebep bulurum.",
-    "Gün 13:\nSeninle aynı odada olmak bile yeter.\nGeri kalanı dünya düşünsün.",
-    "Gün 14:\nSana sarılmanın bir adı olmalı.\nÇünkü bu, resmen huzur.",
-    "Gün 15:\nYarı yol:\nBu çiçek açıyorsa, emeği sensin.",
-    "Gün 16:\nBugün şunu seviyorum:\nSenin “normal halin” bile özel.",
-    "Gün 17:\nKısa ve net:\nSen benim favorimsin.",
-    "Gün 18:\nBugün seni düşündüm.\nSonra bir daha.\nSonra zaten bırakmadım.",
-    "Gün 19:\nBence seninle hayat daha “soft” bir tema kullanıyor.",
-    "Gün 20:\nBugün cool bir plan:\nBir gün aynı anda susup aynı anda gülmek.",
-    "Gün 21:\nSeni sevmenin en güzel yanı:\nHer gün yeniden seçmek gibi.",
-    "Gün 22:\nBugün sadece bir cümle:\nYanımda olsan tamamım.",
-    "Gün 23:\nSen konuşunca ben dinleniyorum.\nEvet, ters ama gerçek.",
-    "Gün 24:\nTatlı hatırlatma:\nSen çok değerlisin. (Benim için değil, kendin için.)",
-    "Gün 25:\nBugün romantik tarafım kazandı:\nSeni görünce içim ‘ev’ diyor.",
-    "Gün 26:\nSeninle: daha cesurum.\nÇünkü arkamda sen varmış gibi hissediyorum.",
-    "Gün 27:\nCool cümle:\nSeni seviyorum.\n(Romantik çevirisi: çok.)",
-    "Gün 28:\nBugün bir hayal:\nSokakta yürürken elini sıkıca tutmak.",
-    "Gün 29:\nSon düzlüğe geldik.\nBen hâlâ aynı yerdeyim: senin yanında.",
-    "Gün 30:\nFinal:\nBu 30 gün sadece küçük bir fragmandı.\nAsıl hikâye… seninle devam etsin."
+    "Bugün bu sayfayı açtıysan… sistemi başlattık demektir. Beraber olduğumuz her gün bir not mantığında hepsini okuyalım balım.",
+    "Gülüşün benim en sevdiklerimden.",
+    "Bugün seni düşündüm. (Her saniye aklımdasın yanlış anlaşılmasın)\nSonra bir daha.",
+    "Seninleyken zaman çok hızlanıyor.\nİlk gün daha dün gibi..",
+    "Bugün sadece şunu bil:\nO ellerini ısırırım.",
+    "Mini görev: Ezgi'yi güzelce öp. Biraz değil bayaaa uğraşıyor.\nBekliyorum <3",
+    "Öpücük yetmemiş öyle dicek ben biliyorum... Bir kere daha öpp",
+    "Seninle konuşmadan sadece otursak bile çok keyifli.",
+    "Barbekü'ye senmişsin gibi sarılıyorum. Bal'ı senmişsin gibi kokluyorum.",
+    "Bazen saçma cümleler kuruyorum ya… \nİçimdeki “seni seviyorum”u saklamak için.",
+    "Bence seninle hayat daha “soft” (yumuşak).",
+    "Sen kalbime çok çatkapı geldin. Napıcazzzz.",
+    "Tatlı bir gerçek:\nBen sana bağımlı oluyorum.",
+    "Sana sarılmaya bir isim koyucam.\nÇünkü bu unfair.",
+    "Yarı yol:\nBu flower bir tek sana açıyor.",
+    "Senden gitmek hiç istemiyorum.",
+    "Bana yemek yedirir misin hepp? Tamam hep değil de yanii böyle birazz bazenn... (türkçem yok manitacılık yaparken)",
+    "Seni sevmeyi çok seviyorum. O ayaklarını sürtüşüne ölürümm. Aağğğğğğğğğ ısırmak istedim şuan seni.",
+    "Seninle BAYAA ciddi düşünüyorum",
+    "Kısa ve net:\nSen benim Balımsın.",
+    "Mini Görev:\nİnşallah-maşallah-subhanallah kashfjksa beğeniyorsundur ya.. Beğeniyosan da fazla şımarma tm mı?? Bu hep olmazz da...\nŞaka şakaaa. Daha güzel fikirler gelir benim aklıma..\n Ezgiyi öpme zamanı...",
+    "Biraz kendime övgüü.. Kızım ben yaşadım eyvallahta sen de yaşadın heee. Buldun kızı valla....(O arapları sikerim)",
+    "Sen heppp konuşş ben sabaha kadar dinlerim seniii.",
+    "Tatlı hatırlatma:\nKimseye bu kadar not yazmadım hayatımda. Sana şuan bayıla bayıla yapıyorum bunu..Bilgin olsun <3",
+    "Seninle yan yana olmak bile yeter.",
+    "Terlik giymediğimde kızmana, bana elinle yemekler yedirmeneee, beni benden çok düşündüğünü farketmemi sağlayacak kadarr bana değer verdiğini görmek\nağğğ eriyorum.",
+    "Sokakta yürürken elini sıkıca tutmak is my love language",
+    "RE45 artık hayatımın main parçalarından birisi  :D:D:D",
+    "Son günler son cümlemizzz.. Hazır mısın??----> Seni seviyorum.",
+    "Final:\nBu 30 gün sadece küçük bir fragmandı.\nAsıl hikâye… daha başlamadı bilee."
   ];
 
   const MEMORY_EVENTS = [
