Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>30 Günlük Sevgi + Anılar</title>
+  <title>30 Gündür Melisam 💗 + Anılar</title>
   <style>
     :root{
       --bg1:#0b1020; --bg2:#111a33;
@@ -317,8 +317,8 @@
   <div class="wrap">
     <div class="top">
       <div class="card hero">
-        <h1>30 Günlük Sevgi</h1>
-        <div class="sub">Bir ay boyunca her gün küçük bir şey… romantik, tatlı ve biraz da cool.</div>
+        <h1>30 Gündür Melisamla</h1>
+        <div class="sub">Bir ay boyunca her gün küçük bir şeyler…</div>
 
         <div class="row" id="gate">
           <input id="nameInput" placeholder="İsmini yaz (minik bir kontrol 😌)" autocomplete="off" />
@@ -401,7 +401,7 @@
 
 <script>
   // ✅ SADECE BU KISIMLARI DÜZENLE
-  const HER_NAME = "ONUN_ADI";      // ör: "MELİSA" veya lakap
+  const HER_NAME = "BAL";      // ör: "MELİSA" veya lakap
   const START_DATE = "2025-11-29";  // 30 günlük mesajların başlayacağı gün
 
   const M = [
@@ -456,33 +456,33 @@
   ];
 
   const TOGETHER_NOTES = {
-    "2025-11-25": "İlk buluşma <3 Karlsruhe",
-    "2025-11-26": "O gece yanında kaldım (Heilbronn) — sabah döndüm",
-    "2025-11-28": "Cuma ders çıkışı Heilbronn’a geldim",
-    "2025-11-29": "Heilbronn Weihnachtsmarkt 🎄",
-    "2025-11-30": "Heilbronn",
-    "2025-12-01": "Sabah ben Karlsruhe’ye döndüm, sen işe (Heilbronn)",
-    "2025-12-02": "İş çıkışı Weihnachtsmarkt — sonra Karlsruhe’ye geldin",
-    "2025-12-05": "Tavuklu makarna + film gecesi 🍝🎬",
-    "2025-12-06": "Heilbronn: kütüphane date (Milira ile tanıştım) 📚",
-    "2025-12-07": "Heilbronn — evdeydik",
-    "2025-12-08": "Sen işe, ben erken Karlsruhe’ye döndüm (yurtta stock görevi)",
-    "2025-12-09": "Ben Heilbronn’a geldim",
-    "2025-12-10": "Sen evden remote çalıştın",
-    "2025-12-11": "Arkadaşlarınla tanışma: Melisa, Hodeige ✨",
-    "2025-12-12": "Dönüş",
-    "2025-12-13": "Bowling akşamı 🎳 — Karlsruhe’ye birlikte dönüş",
-    "2025-12-14": "Birlikteydik",
-    "2025-12-15": "Sen Karlsruhe’den işe gittin",
-    "2025-12-16": "Heilbronn — bana çiçek aldın 🌸",
-    "2025-12-17": "Ben eve döndüm",
+    "2025-11-25": "İlk buluşmaaa <3 Karlsruhedeyiz",
+    "2025-11-26": "O gece yanında kalmaya sürükledi hanımefendii. Kendisine bayılmasam gitmezdim ona göree yani (Heilbronn) — sabah döndüm :( ",
+    "2025-11-28": "Cumaa ders çıkışı Heilbronn’a geldim",
+    "2025-11-29": "Heilbronn Weihnachtsmarkt gezmesi yaptık akşamm🎄.Bana kendi sevdiğin ve denememi isteediğin şeyleri tattırmann çok güzeldii. En çok seni beğendim ama bennn",
+    "2025-11-30": "Heilbronndayız yine Pazar günü evdeyizz.",
+    "2025-12-01": "Sabah ben Karlsruhe’ye döndüm, sen işe gittin (Heilbronndayız hala)",
+    "2025-12-02": "Ve ertesi Salııı...İş çıkışı sen yanıma geldin. Biraz da burada Weihnachtsmarkt :D:D Dönme dolaba bindikk, çokk güzeldi. İlk kez bindim ben normalde korkarım...",
+    "2025-12-05": "Cuma günüü sen geldin 6 kg su getirmişsin amk kızdım ona çok neyse.. Sana Tavuklu makarna bişiler yaptım  + Sonra hande erçel bokumsu filmini izledik askfjasklfj Ha bir de sos yaptın sen dip sos iyiydi aşkm hep yap böyle şeyler 🍝🎬",
+    "2025-12-06": "Ertesi gün Heilbronna gittik: kütüphane date (Milira ile tanıştımm) 📚",
+    "2025-12-07": "Pazar Heilbronndayız yine :D — evdeydik, bugun naptık bulamadım yaa.",
+    "2025-12-08": "Sen işe her zmmnki gibii, ben de erkenden Karlsruhe’ye döndüm (yurtta amk stocku görevlisiydim)",
+    "2025-12-09": "Ertesi gün ders çıkışıı yanınaaa Heilbronn’a geldim. Kızım boş günümüz yokk ne bu birlikte olmuşuz her günn",
+    "2025-12-10": "Sen evden remote çalıştınn hıhahahahahıhıhh (kötü gülüş)",
+    "2025-12-11": "Arkadaşlarınla tanışmaca: Melisa, Hodeige ✨",
+    "2025-12-12": "Dönmüşüz beraber ",
+    "2025-12-13": "Bowling akşamı 🎳 — Heilbronaa git gel yaptık :D Karlsruhe’ye birlikte dönüş",
+    "2025-12-14": "Birlikteydik pazarr günüü",
+    "2025-12-15": "Sabahh sen Karlsruhe’den işe gittin",
+    "2025-12-16": "Heilbronn'a geldimm iş çıkışınaa — bana çiçek aldın 🌸",
+    "2025-12-17": "Kalıpp yurda döndüm",
     "2025-12-19": "Sen Karlsruhe’ye geldin",
-    "2025-12-20": "İlk sinema gecemiz 🎬",
+    "2025-12-20": "İlk sinema datemizz. Avatar izledikk bayıldım 🎬",
     "2025-12-21": "Akşam Heilbronn’a birlikte geldik",
     "2025-12-22": "Heilbronn",
     "2025-12-23": "Heilbronn",
-    "2025-12-24": "Heilbronn — Noel zamanı birlikte 🎄",
-    "2025-12-25": "Sen işe, ben Karlsruhe’ye döndüm",
+    "2025-12-24": "Heilbronn — Brownii yaptıkkk 🎄. Normalde bu akşam gidecektin ama sabah gitmeyi tercih ettin ve ben çokk mutlu olmuştummmm. Bir gece daha beraber uyudukk.",
+    "2025-12-25": "Sen işe.. başka şehiree, ben Karlsruhe’ye döndüm",
   };
 
   const PHOTO_BY_DATE = {
